fix: 진행중 여행 조회 500 에러 수정 (RouteStatus 타입 불일치 + 2개 이상 결과 예외 처리)